# aind-zarr-utils

./: .copier-answers.yml  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci-call.yml  docs-ci.yml  tag_and_publish.yml
docs/source/: api.rst  conf.py  index.md
docs/source/api-reference/: annotations.rst  asset.rst  image.rst  index.md  json_utils.rst  neuroglancer.rst  origin.rst  pipeline_domain_selector.rst  pipeline_transformed.rst  points.rst  s3_cache.rst  uri_utils.rst  zarr.rst
docs/source/contributing/: bug-discovery.md  development.md  index.md  testing.md  versioned-docs.md
docs/source/getting-started/: examples.md  index.md  installation.md  quickstart.md
docs/source/reference/: changelog.md  index.md  troubleshooting.md
docs/source/tutorials/: index.md
docs/source/user-guide/: coordinate-systems.md  index.md  pipeline-corrections.md  s3-integration.md  zarr-conversion.md
scripts/: run_linters_and_checks.sh
src/aind_zarr_utils/: __init__.py  annotations.py  asset.py  image.py  json_utils.py  neuroglancer.py  origin.py  pipeline_domain_selector.py  pipeline_transformed.py  points.py  s3_utils.py  uri_utils.py  zarr.py
src/aind_zarr_utils/domain/: __init__.py  overlays.py  selector.py
src/aind_zarr_utils/formats/: __init__.py  neuroglancer.py  swc.py
src/aind_zarr_utils/io/: __init__.py  metadata.py  paths.py  processing.py  transforms.py  zarr.py
tests/: conftest.py  test_annotations.py  test_asset.py  test_image.py  test_json_utils.py  test_neuroglancer.py  test_pipeline_domain_selector.py  test_pipeline_transformed.py  test_points.py  test_uri_utils.py  test_zarr.py
